// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`International IP address card renders correctly when enabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-10>* {
  min-width: 0;
}

.emotion-12 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

.emotion-20 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-24 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-24 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <div
                class="components-flex components-h-stack emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="HStack"
              >
                <span
                  class="components-form-toggle is-checked"
                >
                  <input
                    aria-describedby="inspector-toggle-control-2__help"
                    checked=""
                    class="components-form-toggle__input"
                    id="inspector-toggle-control-2"
                    type="checkbox"
                  />
                  <span
                    class="components-form-toggle__track"
                  />
                  <span
                    class="components-form-toggle__thumb"
                  />
                </span>
                <label
                  class="components-flex-item components-flex-block components-toggle-control__label emotion-12 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexBlock"
                  for="inspector-toggle-control-2"
                >
                  Enable International IP Address filter
                </label>
              </div>
            </div>
            <p
              class="components-base-control__help emotion-14 emotion-15"
              id="inspector-toggle-control-2__help"
            >
              <span
                class="components-toggle-control__help"
              >
                This filter screens for 
                <a
                  class="components-external-link"
                  href="https://simple.wikipedia.org/wiki/IP_address"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    IP addresses
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
                 outside of your 
                <a
                  href="admin.php?page=wc-settings&tab=general"
                >
                  supported countries
                </a>
                . When enabled the payment will be blocked.
              </span>
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
        >
          <div
            class="components-visually-hidden emotion-16 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Information notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-10 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  size="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                Orders from outside of the following countries will be screened by the filter: 
                <strong>
                  Canada, United States
                </strong>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International IP address card renders correctly when enabled and checked 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-10>* {
  min-width: 0;
}

.emotion-12 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

.emotion-20 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-24 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-24 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <div
                class="components-flex components-h-stack emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="HStack"
              >
                <span
                  class="components-form-toggle is-checked"
                >
                  <input
                    aria-describedby="inspector-toggle-control-3__help"
                    checked=""
                    class="components-form-toggle__input"
                    id="inspector-toggle-control-3"
                    type="checkbox"
                  />
                  <span
                    class="components-form-toggle__track"
                  />
                  <span
                    class="components-form-toggle__thumb"
                  />
                </span>
                <label
                  class="components-flex-item components-flex-block components-toggle-control__label emotion-12 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexBlock"
                  for="inspector-toggle-control-3"
                >
                  Enable International IP Address filter
                </label>
              </div>
            </div>
            <p
              class="components-base-control__help emotion-14 emotion-15"
              id="inspector-toggle-control-3__help"
            >
              <span
                class="components-toggle-control__help"
              >
                This filter screens for 
                <a
                  class="components-external-link"
                  href="https://simple.wikipedia.org/wiki/IP_address"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    IP addresses
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
                 outside of your 
                <a
                  href="admin.php?page=wc-settings&tab=general"
                >
                  supported countries
                </a>
                . When enabled the payment will be blocked.
              </span>
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
        >
          <div
            class="components-visually-hidden emotion-16 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Information notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-10 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  size="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                Orders from outside of the following countries will be blocked by the filter: 
                <strong>
                  Canada, United States
                </strong>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International IP address card renders correctly when woocommerce_allowed_countries is all 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-8>* {
  min-width: 0;
}

.emotion-10 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-14 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-14 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="wcpay-inline-notice wcpay-inline-warning-notice components-notice is-warning"
        >
          <div
            class="components-visually-hidden emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Warning notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-8 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  class="gridicon gridicons-notice-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                This filter is disabled because you're currently selling to all countries.
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International IP address card renders correctly when woocommerce_allowed_countries is all_except 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-10>* {
  min-width: 0;
}

.emotion-12 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

.emotion-20 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-24 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-24 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <div
                class="components-flex components-h-stack emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="HStack"
              >
                <span
                  class="components-form-toggle"
                >
                  <input
                    aria-describedby="inspector-toggle-control-1__help"
                    class="components-form-toggle__input"
                    id="inspector-toggle-control-1"
                    type="checkbox"
                  />
                  <span
                    class="components-form-toggle__track"
                  />
                  <span
                    class="components-form-toggle__thumb"
                  />
                </span>
                <label
                  class="components-flex-item components-flex-block components-toggle-control__label emotion-12 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexBlock"
                  for="inspector-toggle-control-1"
                >
                  Enable International IP Address filter
                </label>
              </div>
            </div>
            <p
              class="components-base-control__help emotion-14 emotion-15"
              id="inspector-toggle-control-1__help"
            >
              <span
                class="components-toggle-control__help"
              >
                This filter screens for 
                <a
                  class="components-external-link"
                  href="https://simple.wikipedia.org/wiki/IP_address"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    IP addresses
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
                 outside of your 
                <a
                  href="admin.php?page=wc-settings&tab=general"
                >
                  supported countries
                </a>
                . When enabled the payment will be blocked.
              </span>
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
        >
          <div
            class="components-visually-hidden emotion-16 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Information notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-10 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  size="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                Orders from the following countries will be screened by the filter: 
                <strong>
                  Canada, United States
                </strong>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International IP address card renders correctly when woocommerce_allowed_countries is specific 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-10>* {
  min-width: 0;
}

.emotion-12 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

.emotion-20 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-24 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-24 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <div
                class="components-flex components-h-stack emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="HStack"
              >
                <span
                  class="components-form-toggle"
                >
                  <input
                    aria-describedby="inspector-toggle-control-0__help"
                    class="components-form-toggle__input"
                    id="inspector-toggle-control-0"
                    type="checkbox"
                  />
                  <span
                    class="components-form-toggle__track"
                  />
                  <span
                    class="components-form-toggle__thumb"
                  />
                </span>
                <label
                  class="components-flex-item components-flex-block components-toggle-control__label emotion-12 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexBlock"
                  for="inspector-toggle-control-0"
                >
                  Enable International IP Address filter
                </label>
              </div>
            </div>
            <p
              class="components-base-control__help emotion-14 emotion-15"
              id="inspector-toggle-control-0__help"
            >
              <span
                class="components-toggle-control__help"
              >
                This filter screens for 
                <a
                  class="components-external-link"
                  href="https://simple.wikipedia.org/wiki/IP_address"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    IP addresses
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
                 outside of your 
                <a
                  href="admin.php?page=wc-settings&tab=general"
                >
                  supported countries
                </a>
                . When enabled the payment will be blocked.
              </span>
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
        >
          <div
            class="components-visually-hidden emotion-16 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Information notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-10 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  size="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                Orders from outside of the following countries will be screened by the filter: 
                <strong>
                  Canada, United States
                </strong>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`International IP address card renders like disabled when checked, but not enabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-10>* {
  min-width: 0;
}

.emotion-12 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  margin-top: calc(4px * 2);
  margin-bottom: 0;
  font-size: 12px;
  font-style: normal;
  color: #757575;
}

.emotion-20 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-24 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-24 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="international-ip-address-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          International IP Address
        </h4>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <div
                class="components-flex components-h-stack emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="HStack"
              >
                <span
                  class="components-form-toggle"
                >
                  <input
                    aria-describedby="inspector-toggle-control-4__help"
                    class="components-form-toggle__input"
                    id="inspector-toggle-control-4"
                    type="checkbox"
                  />
                  <span
                    class="components-form-toggle__track"
                  />
                  <span
                    class="components-form-toggle__thumb"
                  />
                </span>
                <label
                  class="components-flex-item components-flex-block components-toggle-control__label emotion-12 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexBlock"
                  for="inspector-toggle-control-4"
                >
                  Enable International IP Address filter
                </label>
              </div>
            </div>
            <p
              class="components-base-control__help emotion-14 emotion-15"
              id="inspector-toggle-control-4__help"
            >
              <span
                class="components-toggle-control__help"
              >
                This filter screens for 
                <a
                  class="components-external-link"
                  href="https://simple.wikipedia.org/wiki/IP_address"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    IP addresses
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
                 outside of your 
                <a
                  href="admin.php?page=wc-settings&tab=general"
                >
                  supported countries
                </a>
                . When enabled the payment will be blocked.
              </span>
            </p>
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            You should be especially wary when a customer has an international IP address but uses domestic billing and shipping information. Fraudsters often pretend to live in one location, but live and shop from another.
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-info-notice components-notice is-info"
        >
          <div
            class="components-visually-hidden emotion-16 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Information notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-10 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  size="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8  6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-20 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                Orders from outside of the following countries will be blocked by the filter: 
                <strong>
                  Canada, United States
                </strong>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-24 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
